2008-05-28 Chris Morley

	* windows-vc2005/OBCSharp/OBCSharp.vcproj,
	* windows-vc2005/OBJava/OBJava.vcproj,
	* windows-vc2005/OpenBabelOBF.sln
	Build release versions even in Debug mode.
	Use env var JAVABASE, e.g."C:\Program Files\Java\jdk1.6.0_03"
	so that there is no dependence in the code on the installed
	Java version. (Is there a standard variable for this?)
	
	* windows-vc2005/OBMoreFormats/OBMoreFormats.vcproj:add adfformat

2008-05-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/openbabel-perl.i, scripts/perl/Makefile.PL: 
	Fix up Perl scripting. Now works on Mac OS X and appears to have
	clean converisons via "make test." Fixes PR#1795155 and 1881688.

	* src/formats/adfformat.cpp (OBT41Format::ReadMolecule): Convert
	from zyx format in ADF files to xyz in Open Babel for cubes. Only
	keep cubes which have actual data.

2005-05-28  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/xml/cmlformat.cpp: Fixed PR 1975137 - atoi, strtol
	require null terminated strings.

2008-05-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/obiter.cpp: (same as Chris' commit, but let's do the same for angles)
	Make sure to always set _i, even when _vtorsion is empty.
	Otherwise OBMolTorsionIter::bool() will compare _i to _vtorsion.end() which
	caused a segfault on windows. Fixes Avogadro windows bug #1972244.

2008-05-27 Chris Morley

	* src/obiter.cpp(OBMolTorsionIter::OBMolTorsionIter):
	prevent crash when _vtorsion is empty. Was affecting builder
	with small molecules.

2008-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.* src/formats/Makefile.*: Add versioned install
	directories for formats. Fixes PR#1905093.

	* src/formats/hinformat.cpp: Fix PR#1947913 with hang during HIN
	reading.

2005-05-26  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Creating SWIG wrapper for C#
	* windows-vc2005/OpenBabelOBF.sln, OBJava, OBCSharp: Creating projects
	for OBJava and OBCSharp
